Add expand URL parameter
