# api/models/message.js
@@ -23,7 +23,7 @@ module.exports = function(sequelize, DataTypes) {
     },
     content: {type: DataTypes.STRING, allowNull: false},
     parentMessageId: {
-      type: DataTypes.BIGINT, 
+      type: DataTypes.BIGINT,
       get: function() {
         return parseInt(this.getDataValue('parentMessageId'));
       }
@@ -34,6 +34,35 @@ module.exports = function(sequelize, DataTypes) {
     tableName: 'messages',
     associate: function(models) {
       Message.belongsTo(models.Discussion);
+      Message.hasMany(models.Message, {as: 'Message', foreignKey: 'parentMessageId', through: null});
+    },
+    classMethods: {
+      findAssociatedObject: function(db, foreignKey, value, callback){
+        if(!value){
+          return callback(null, {});
+        }
+        if(foreignKey==='discussionId'){
+          db.Discussion.find({where: {id: value}}).success(function(discussion){
+            callback(null, discussion);
+          }).error(function(err){
+            callback(err);
+          });
+        }
+        if(foreignKey==='parentMessageId'){
+          db.Message.find({where: {id: value}}).success(function(parentMessage){
+            callback(null, parentMessage);
+          }).error(function(err){
+            callback(err);
+          });
+        }
+      },
+      findChildren: function(Model, value, callback){
+        Model.findAll({where: {parentMessageId: value}}).success(function(children){
+          callback(null, children);
+        }).error(function(err){
+          callback(err);
+        });
+      }
     }
   });
 
