# api/swagger/swagger.yaml
@@ -1,4 +1,4 @@
-swagger: 2.0
+swagger: "2.0"
 info:
   version: "0.0.1"
   title: Serenity Discussion API
@@ -65,6 +65,13 @@ paths:
           in: query
           type: string
           description: field name to sort {asc [nulls {first | last} ] | desc  [nulls {first | last} }
+        - name: expand
+          in: query
+          type: array
+          required: false
+          description: expand parameter which helps to request a full object
+          items:
+            type: string
       responses:
         "200":
           description: Return a Discussion Resource
@@ -88,6 +95,13 @@ paths:
           required: true
           type: integer
           format: int64
+        - name: expand
+          in: query
+          type: array
+          required: false
+          description: expand parameter which helps to request a full object
+          items:
+            type: string
       responses:
         "200":
           description: Return a Discussion Resource
@@ -152,6 +166,13 @@ paths:
           required: true
           type: integer
           format: int64
+        - name: expand
+          in: query
+          type: array
+          required: false
+          description: expand parameter which helps to request a full object
+          items:
+            type: string
       responses:
         "200":
           description: Success
@@ -208,6 +229,13 @@ paths:
           required: true
           type: integer
           format: int64
+        - name: expand
+          in: query
+          type: array
+          required: false
+          description: expand parameter which helps to request a full object
+          items:
+            type: string
       responses:
         "200":
           description: A successufly response
@@ -363,6 +391,13 @@ paths:
           required: true
           type: integer
           format: int64
+        - name: expand
+          in: query
+          type: array
+          required: false
+          description: expand parameter which helps to request a full object
+          items:
+            type: string
       responses:
         "200":
           description: Successful reply
@@ -480,6 +515,13 @@ definitions:
       updatedBy:
         type: string
         description: The handle fo the user
+      messages:
+        type: array
+        description: The first level child messages.
+        items:
+          $ref: MessageResource
+          minItems: 0
+          uniqueItems: true
   MessageResource:
     required:
       - id
@@ -514,6 +556,19 @@ definitions:
       updatedBy:
         type: string
         description: The handle fo the user
+      messages:
+        type: array
+        description: The first level child messages
+        items:
+          $ref: MessageResource
+          minItems: 0
+          uniqueItems: true
+      discussion:
+        $ref: DiscussionResource
+        description: The discussion object which the message belongs to
+      parentMessage:
+        $ref: MessageResource
+        description: The parent message which the message belongs to
   DiscussionBody:
     required:
       - remoteObjectKey
